Bug 366568 - when dragging & dropping folders, contained files are opened as blank / new.
Summary: when dragging & dropping folders, contained files are opened as blank / new.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08
Platform: unspecified Linux
: NOR grave
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: regression, usability
Depends on:
Blocks:
 
Reported: 2016-08-09 22:16 UTC by xaxazak
Modified: 2017-11-28 20:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xaxazak 2016-08-09 22:16:45 UTC
Dragging and dropping a folder that contains text files doesn't read the content of the text files, but instead creates new blank documents for them and colors them grey in the tree view.

Attempting to save these files would likely cause loss of data.

Perhaps this might be related to https://bugs.kde.org/show_bug.cgi?id=366260.

Reproducible: Always

Steps to Reproduce:
1. Open Kate with Tree View shown.
2. In dolphin (or another file browser) find a folder containing text files.
3. Drag & Drop this folder into Kate.

Actual Results:  
Kate creates entries for the created text files, but they are colored grey and have no content when selected.

Expected Results:  
The created text file entries would contain the text their file contains.

System: Linux Mint XFCE 18
KDE apps installed from default Ubuntu 16.04 repository.
Comment 1 Kåre Särs 2016-08-10 06:12:01 UTC
I can reproduce with a very recent version of Kate, so it is different from 366260.
Comment 2 Christoph Cullmann 2016-09-08 16:34:16 UTC
Git commit fa5e37af33f44f6e721880042a48e162973c4840 by Christoph Cullmann.
Committed on 08/09/2016 at 16:33.
Pushed by cullmann into branch 'master'.

Bug 366568 - when dragging & dropping folders, contained files are opened as blank / new.

CHANGELOG: Fix drag & drop of folder into Kate window

M  +4    -3    kate/katemainwindow.cpp

http://commits.kde.org/kate/fa5e37af33f44f6e721880042a48e162973c4840
Comment 3 xaxazak 2016-11-05 22:36:24 UTC
Reopening, sorry.

Still occurs on Kate 16.08.2 - master branch (cloned today, 06/Nov/2016).

Tried twice, once on Mint 18, once on Manjaro 16.10.

Gonna bump this up to 'grave' as it has caused data loss - accidentally saving all wiped about 10 files.

Initial report is still accurate.
Comment 4 xaxazak 2016-11-06 00:09:22 UTC
I think somehow my status changes weren't applied when I changed it. If someone just reverted them, sorry - not trying to fight it.
Comment 5 Nikolaos Kakouros 2017-02-16 00:33:48 UTC
This works correct on latest kate (16.6.2).
Comment 6 Nate Graham 2017-11-28 20:54:11 UTC
Marking as fixed per latest comment.