Bug 366568 - when dragging & dropping folders, contained files are opened as blank / new.

CHANGELOG: Fix drag & drop of folder into Kate window

BUG: 366568